Résolution temporaire du bug de l'image sur PhoneGap

--- a/platforms/browser/www/css/index.css
+++ b/platforms/browser/www/css/index.css
@@ -14,6 +14,7 @@ body {
 	height: 100%;
 	background-color: lightblue;
 	position:fixed;
+
 }
 
 #myCanvas {
@@ -23,4 +24,7 @@ body {
   display: block;
 	border: 1px solid;
 	background-color: white;
+
+	background-image:url("../images/road.jpg");
+    background-repeat:repeat-y;
 }
